# safecopy-hunit

./: .travis.yml  LICENSE  README.md  safecopy-hunit.cabal  stack-nightly.yaml  stack.yaml
src/Test/HUnit/: SafeCopy.hs
test/: Main.hs
test/files/: TrivialRecord.1  TrivialRecord.2
