name:                safecopy-hunit
version:             0.1.0.0
synopsis:            Testing file compatibility of safecopy values
-- description:
homepage:            https://github.com/Soostone/safecopy-hunit#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Xavier
maintainer:          michael.xavier@soostone.com
copyright:           2017 Soostone Inc
category:            Test
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag lib-Werror
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Test.HUnit.SafeCopy
  build-depends:       base >= 4.6 && < 5
                     , safecopy >= 0.9.1
                     , HUnit
                     , path
                     , path-io
                     , bytestring
                     , cereal
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall


test-suite safecopy-hunit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , safecopy-hunit
                     , tasty
                     , tasty-hunit
                     , safecopy
                     , path
                     , path-io
                     , HUnit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  if flag(lib-Werror)
    ghc-options: -Werror

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/Soostone/safecopy-hunit
